<resources>
    <!-- Activities' titles -->
    <string name="app_name">My CookBook</string>
    <string name="add_note_screen">Add a recipe</string>
    <string name="add_category_screen">Add a category</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="start_second_activity">Start 2nd Activity</string>
    <string name="drawer_menu">Menu</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="rate_us">Rate us</string>
    <string name="fount_problem">Found problem?</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="g_to_mg">Grams to milligrams</string>

    <!-- Hint texts -->
    <string name="note_title_hint">title</string>
    <string name="note_category_hint">category</string>
    <string name="note_ingredients_hint">ingredients</string>
    <string name="note_instructions_hint">instructions</string>
    <string name="pressure_g">g</string>
    <string name="pressure_mg">mg</string>

    <string name="add_note_btn">OK</string>
    <string name="title_activity_get_image">GetImageActivity</string>
    <string name="make_photo">make a photo</string>
    <string name="choose_in_gallery">choose in gallery</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>

    <!-- Errors -->
    <string name="add_category_error">Error! Try again</string>
    <string name="add_category_empty_title_error">Error! Title can not be empty</string>
    <string name="add_recipe_empty_error">Error! Category can not be empty</string>
    <string name="title_activity_choose_category">ChooseCategoryActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_recipe">RecipeActivity</string>

    <!-- Recipe labels -->
    <string name="ingredients_label">Ingredients</string>
    <string name="instructions_label">Instructions</string>
    <string name="category_label">Category</string>

    <string name="new_category_label">New name</string>

    <!--Delete a recipe dialog-->
    <string name="delete_this_recipe">Delete this recipe?</string>
    <string name="delete_this_recipes">Delete these recipes?</string>

    <!--Delete a category dialog-->
    <string name="delete">DELETE</string>
    <string name="delete_category_with_recipes">The category would be deleted with recipes which it contains! \nDelete anyway?</string>

</resources>
