<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rl_add_edit_recipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_add_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@mipmap/no_image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/button_and_pb_holder"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="vertical"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/pb_add_recipe_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                </LinearLayout>

            <Button
                android:id="@+id/btn_add_image"
                style="@style/add_image_button"
                android:layout_alignBottom="@+id/button_and_pb_holder"
                android:layout_marginRight="25dp" />

            <EditText
                android:id="@+id/et_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/button_and_pb_holder"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/note_title_hint" />

            <EditText
                android:id="@+id/et_recipe_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/et_recipe_title"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:focusable="false"
                android:hint="@string/note_category_hint" />

            <EditText
                android:id="@+id/et_recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/et_recipe_category"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/note_ingredients_hint" />

            <EditText
                android:id="@+id/et_recipe_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/et_recipe_ingredients"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/note_instructions_hint" />

            <Button
                android:id="@+id/btn_add_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_recipe_instructions"
                android:text="@string/add_note_btn"
                android:textColor="@color/action_bar_primary"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textSize="20sp"
                android:background="@drawable/add_note_btn_bg"/>
        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_add_edit_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>